Fix color picker text color in dark mode

--- a/src/FormComponents/style.css
+++ b/src/FormComponents/style.css
@@ -243,3 +243,7 @@
   padding-right: 20px;
   min-width: 100px;
 }
+
+.bp3-dark .tg-color-picker-selector input {
+  color: #222222;
+}
